--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -366,7 +366,7 @@
                 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
                 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 
-                <title t-esc="title or 'Flectra'"/>
+                <title t-esc="SEMATICS'"/>
                 <link type="image/x-icon" rel="shortcut icon" t-att-href="x_icon or '/web/static/src/img/favicon.ico'"/>
 
                 <script type="text/javascript">
@@ -375,7 +375,7 @@
                     };
                 </script>
 
-                <t t-raw="head or ''"/>
+                <t t-raw="head or 'Sematics'"/>
             </head>
             <body t-att-class="body_classname">
                 <t t-raw="0"/>
