--- a/addons/website_sale/static/src/less/website_sale.less
+++ b/addons/website_sale/static/src/less/website_sale.less
@@ -10,9 +10,92 @@
 }
 
 /* quick view start */
+.quick-view .fancybox {
+    -webkit-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+}
+.quick-view .fancybox {
+    opacity: 0.7;
+    font-size: 11px;
+    font-weight: normal;
+    background: #EEEEEE;
+    border-radius: 0;
+    left: 0;
+    margin: 0;
+    padding: 7px;
+    float: none;
+    color: #000000;
+    overflow: hidden;
+    text-align: center;
+    white-space: nowrap;
+    display: block;
+    width: 32px;
+    text-transform: uppercase;
+    line-height: 1.42857;
+}
+.quick-view .fancybox .icon {
+    margin-right: 10px;
+    margin-left: 4px;
+    font-size: 12px;
+}
+.quick-view .fancybox:hover {
+    width: 100%;
+}
+
+
+.quick {
+    top: 0;
+    height: auto;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    z-index: 6;
+    opacity: 1;
+    transition: 0.3s all ease 0s;
+    -webkit-transition: 0.3s all ease 0s;
+}
+.quick .quick-view-bgr {
+    width: 100%;
+    text-align: center;
+}
+
+.quick .quick-view-bgr a {
+    display: block;
+    cursor: pointer;
+    border: none;
+    position: absolute;
+}
+.product-single:hover .quick {
+  opacity: 1;
+  z-index: 20;
+}
+.oe_grid:hover .quick {
+  opacity: 1;
+  z-index: 20;
+}
+.oe_list:hover .quick {
+  opacity: 1;
+  z-index: 20;
+}
+
+.quick-view-product{
+    position: relative !important;
+}
+
 .modal-lg .product_price {
     position: relative !important;
 }
+
+.quick-modal .modal-content {
+	border-radius: 0px;
+}
+.quick-modal .modal-header {
+	border-bottom: 0px;
+}
+.quick-modal .modal-footer {
+ 	border-top: 0px;
+}
+
 /* quick view end */
 
 /* share Option start */
@@ -45,29 +128,3 @@
     color: #666666 !important;
 }
 /* share Option end */
-
-/* Categorized Shop Page START */
-.main-categ{
-    display: block;
-    background: #e7e7e7;
-    padding: 5px;
-    margin-bottom: 5px;
-    font-weight: bold;
-    font-size: 16px;
-    color: @brand-primary;
-    &:hover {
-        text-decoration: none;
-    }
-}
-.child-categ {
-    padding: 7px 15px;
-    a {
-        text-decoration: underline;
-        color: #444;
-
-        &:hover {
-            color: @brand-primary;
-        }
-    }
-}
-/* Categorized Shop Page END */
