--- a/addons/website_sale/views/product_views.xml
+++ b/addons/website_sale/views/product_views.xml
@@ -75,8 +75,8 @@
                     <field name="ribbon_id"/>
                     <field name="tag_ids" widget="many2many_tags"/>
                     <field name="brand_id" options="{'no_create': True}"/>
-                    <field name="website_ids" widget="many2many_tags"/>
                 </group>
+                <field name="website_ids"/>
             </group>
             <button name="toggle_active" position="before">
                 <button class="oe_stat_button" name="website_publish_button"
@@ -156,7 +156,6 @@
                             <field name="name"/>
                             <field name="parent_id"/>
                             <field name="sequence"/>
-                            <field name="partner_tag_ids" widget="many2many_tags"/>
                             <field name="website_ids" widget="many2many_tags"/>
                         </group>
                     </div>
@@ -198,20 +197,12 @@
         <field name="model">product.pricelist</field>
         <field name="arch" type="xml">
             <field name='currency_id' position='after'>
-                <field name="selectable"/>
-                <field name="website_ids" string='Allow to use on '
-                           widget="many2many_tags"/>
-            </field>
-        </field>
-    </record>
-
-    <record id="website_sale_pricelist_tree_view" model="ir.ui.view">
-        <field name="name">product.pricelist.tree.inherit.product</field>
-        <field name="model">product.pricelist</field>
-        <field name="inherit_id" ref="product.product_pricelist_view_tree"/>
-        <field name="arch" type="xml">
-            <field name="currency_id" position="after">
-                <field name="selectable" />
+                <field name="website_id" string='Allow to use on '>
+                    <tree editable='bottom' string="Website Store">
+                        <field name="website_id"/>
+                        <field name="selectable"/>
+                    </tree>
+                </field>
             </field>
         </field>
     </record>
@@ -329,14 +320,13 @@
         <field name="model">product.brand</field>
         <field name="arch" type="xml">
             <kanban>
-                <field name="id"/>
                 <field name="brand_image"/>
                 <field name="name"/>
                 <templates>
                     <t t-name="kanban-box">
                         <div class="oe_kanban_global_click">
                             <div class="o_kanban_image">
-                                <img t-att-src="kanban_image('product.brand', 'brand_image', record.id.raw_value)"/>
+                                <img t-att-src="kanban_image('product.brand', 'brand_image')"/>
                             </div>
                             <div class="oe_kanban_details">
                                 <strong><field name="name"/></strong>
@@ -347,6 +337,7 @@
             </kanban>
         </field>
     </record>
+
 
     <!-- Product Brand Action -->
     <record id="product_by_brand_action" model="ir.actions.act_window">
@@ -375,5 +366,13 @@
             </p>
         </field>
     </record>
+
+    <!-- Product Brands Menu -->
+    <menuitem action="product_by_brand_action" id="menu_product_by_brand"
+              parent="website_sale.menu_catalog"/>
+
+    <!-- Product Tags Menu -->
+    <menuitem action="product_tags_action" id="menu_product_tags" name="Tags"
+              parent="website_sale.menu_catalog"/>
 
 </flectra>
