--- a/addons/website_sale/views/sale_order_views.xml
+++ b/addons/website_sale/views/sale_order_views.xml
@@ -131,6 +131,10 @@
         action="base.action_partner_customer_form"
         parent="menu_orders" sequence="4"/>
 
+    <!-- Product Limit Menu -->
+    <menuitem action="website_product_limit_action" id="menu_view_limit"
+              name="Website Product View Limit" parent="website_sale.menu_ecommerce_settings"/>
+
 
     <!-- <menuitem id="menu_orders_invoices" name="Invoices" parent="menu_orders" action="action_invoices_ecommerce" sequence="4"/> -->
 
@@ -149,18 +153,6 @@
     <menuitem id="menu_report_sales" name="Sales"
         action="sale_report_action_dashboard"
         parent="menu_reporting" sequence="1"/>
-
-    <!-- Product Brands Menu -->
-    <menuitem action="product_by_brand_action" id="menu_product_by_brand"
-              name="Brands" parent="website_sale.menu_product_settings"/>
-
-    <!-- Product Tags Menu -->
-    <menuitem action="product_tags_action" id="menu_product_tags"
-              name="Tags" parent="website_sale.menu_product_settings"/>
-
-    <!-- Product Limit Menu -->
-    <menuitem action="website_product_limit_action" id="menu_view_limit"
-              name="Product View Limit per Page" parent="website_sale.menu_ecommerce_settings"/>
 
     <!-- Configuration sub-menus -->
     <menuitem id="menu_ecommerce_payment_acquirers"
